kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: movie-reco-system
  labels:
    name: movie-reco-system
